# aur-guard

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
hooks/: aur-guard.hook
packaging/aur-guard-bin/: PKGBUILD  aur-guard.install
packaging/aur-guard-git/: PKGBUILD  aur-guard.install
scripts/: makepkg
src/: diff.rs  main.rs  parent.rs  patterns.rs  report.rs  rpc.rs  scanner.rs  ui.rs  verdict_cache.rs
test-fixtures/: PKGBUILD.benign  PKGBUILD.benigno  PKGBUILD.impersonate  PKGBUILD.malicioso  PKGBUILD.malicious
test-fixtures/with-install/: PKGBUILD  foo.install
