[package]
name = "aur-guard"
version = "0.1.0"
edition = "2021"
description = "Security scanner for AUR PKGBUILDs. Detects malicious patterns before makepkg runs the build."
license = "MIT"
rust-version = "1.80"

[[bin]]
name = "aur-guard"
path = "src/main.rs"

[dependencies]
regex = "1.10"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
# Small, pure-Rust HTTP client (rustls + webpki-roots) for AUR RPC lookups.
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Used to fingerprint PKGBUILD + .install bundles for the short-lived verdict cache.
sha2 = "0.10"
# Needed for getppid(2) and kill(2) — when the user declines a scan we want
# to SIGINT the calling AUR helper (yay/paru/etc.) so it stops the install
# loop instead of retrying makepkg several more times.
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
